Fix crash when drop bottle in encase fan.